--- a/app/assets/stylesheets/flattened_active_admin/mixins/_buttons.css.scss
+++ b/app/assets/stylesheets/flattened_active_admin/mixins/_buttons.css.scss
@@ -40,20 +40,20 @@
 @mixin light-button {
   @include basic-button;
   background: $action-button-default-background;
-  border: solid 1px #c7c7c7;
   @include border-colors(#d3d3d3, #c7c7c7, #c2c2c2);
-  @include text-shadow;
-  color: $primary-color;
+  color: $action-button-default-text;
 
   &:not(.disabled) {
     &:hover {
       background: $action-button-hover-background;
+      color: $action-button-hover-text;
     }
 
     &:active {
       box-shadow: 0 1px 2px rgba(0,0,0,0.22) inset, 0 1px 0 0px #EEE;
       @include border-colors(#c2c2c2, #b9b9b9, #b7b7b7);
       background: $action-button-active-background;
+      color: $action-button-active-text;
     }
   }
 
