--- a/app/assets/stylesheets/flattened_active_admin/structure/_title_bar.scss
+++ b/app/assets/stylesheets/flattened_active_admin/structure/_title_bar.scss
@@ -25,7 +25,7 @@
     padding: 0;
     font-size: 2.6em;
     line-height: 100%;
-    font-weight: bold;
+    font-weight: $title-bar-font-weight;
   }
 
   .action_items {
